Fix z-index issue with pagination and expanded E&O form.

--- a/web/sites/all/themes/gpii_base/scss/gpii_base.scss
+++ b/web/sites/all/themes/gpii_base/scss/gpii_base.scss
@@ -594,6 +594,7 @@ html {
 
 #footer-wrap {
   width: 100%;
+  z-index: 3;
 }
 
   #push {
